# r-ec8

./: .gitignore  Cargo.toml  README.md
chip8_core/: Cargo.toml
chip8_core/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
wasm/: Cargo.toml  build_wasm.sh
wasm/src/: lib.rs
web/: index.html  index.js
