[workspace]
resolver = "3"
members = ["chip8_core", "desktop", "wasm"]


[workspace.package]
version = "0.1.0"
edition = "2024"


# 在crate 中 与 {workspace = true } 一起使用
[workspace.dependencies]
sdl2 = "^0.37.0"
js-sys = "^0.3.77"
wasm-bindgen = "^0.2.100"
web-sys ={ version = "^0.3.77", features = ["CanvasRenderingContext2d","Document","Element","HtmlCanvasElement","ImageData","KeyboardEvent","Window",]}
